--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 <h1>Produtos</h1>
+
+{% if current_user.is_authenticated %}
+    <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
+    <br><br>
+{% endif %}
+
 <a href="{{ url_for('create')}}" class="btn btn-primary">Inserir um Novo Produto</a>
 <table class="table">
     <thead>
@@ -22,7 +28,7 @@
             </td>
         </tr>
         {% endfor %}
+        
     </tbody>
-
 </table>
 {% endblock %}
