--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-    <h2>Login</h2>
-    <form method="POST">
-        <label for="username">Usuário:</label>
-        <input type="text" id="username" name="username" required><br><br>
-        <label for="password">Senha:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        <button type="submit">Entrar</button>
-    </form>
+{% extends 'base.html' %}
 
-    {% if error %}
-    <p style="color:red;">{{ error }}</p>
-    {% endif %}
-</body>
-</html>
+{% block content %}
+<h1>Login</h1>
+
+<form method="POST">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" name="username" class="form-control" id="username" required>
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" name="password" class="form-control" id="password" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+</form>
+
+{% endblock %}
