--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,34 +1,43 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Produtos</h1>
+<div class="container">
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1>Produtos</h1>
 
-{% if current_user.is_authenticated %}
-    <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
-    <br><br>
-{% endif %}
+        {% if current_user.is_authenticated and current_user.role == 'admin' %}
+            <a href="{{ url_for('register') }}" class="btn btn-success">Cadastrar Novo Usuário</a>
+        {% endif %}
+    </div>
 
-<a href="{{ url_for('create')}}" class="btn btn-primary">Inserir um Novo Produto</a>
-<table class="table">
-    <thead>
-        <tr>
-            <th>Nome do Produto</th>
-            <th>Quantidade</th>
-            <th>Ação</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for item in items %}
-        <tr>
-            <td>{{item.nome}}</td>
-            <td>{{item.quantidade}}</td>
-            <td>
-                <a href="{{ url_for('update', id=item.id) }}" class="btn btn-warning">EDITAR</a>
-                <a href="{{ url_for('delete', id=item.id) }}" class="btn btn-danger">DELETAR</a>
-            </td>
-        </tr>
-        {% endfor %}
-        
-    </tbody>
-</table>
+    <div class="mb-3">
+        <a href="{{ url_for('create') }}" class="btn btn-primary">Inserir um Novo Produto</a>
+    </div>
+
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+            <tr>
+                <th>Nome do Produto</th>
+                <th>Quantidade</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in items %}
+            <tr>
+                <td>{{ item.nome }}</td>
+                <td>{{ item.quantidade }}</td>
+                <td>
+                    <a href="{{ url_for('update', id=item.id) }}" class="btn btn-warning">Editar</a>
+                    <a href="{{ url_for('delete', id=item.id) }}" class="btn btn-danger">Deletar</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('logout') }}" class="btn btn-danger">Logout</a>
+    {% endif %}
+</div>
 {% endblock %}
