--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,13 +4,14 @@
 <h1>Login</h1>
 
 <form method="POST">
+    {{ form.hidden_tag() }}  <!-- Insere o token CSRF automaticamente -->
     <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" name="username" class="form-control" id="username" required>
+        <label for="username">Usuário</label>
+        {{ form.username(class="form-control", id="username", required=True) }}
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" name="password" class="form-control" id="password" required>
+        <label for="password">Senha</label>
+        {{ form.password(class="form-control", id="password", required=True) }}
     </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
