--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 <h1>Login</h1>
 
 <form method="POST">
-    {{ form.hidden_tag() }}  <!-- Insere o token CSRF automaticamente -->
+    {{ form.hidden_tag() }}  
     <div class="form-group">
         <label for="username">Usuário</label>
         {{ form.username(class="form-control", id="username", required=True) }}
